fixed vertical margin spacing on top of hero image

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 }
 body {
   padding-top: 62.53px;
-  margin: 1em 0 0 0;
+  margin: 0;
   font-family: 'Courier Prime', 'Roboto', 'Arial';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
